Prevent long hyperlinks in About Me from overflowing page on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,11 @@ body {
 	font-size: 1.2rem;
 }
 
+#about-me-section a {
+	white-space: pre-wrap;
+	word-break: break-all;
+}
+
 #resume-section {
 	align-items: center;
 	display: flex;
